WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150277
[EFL] Fix debug build break since
r191198
https://bugs.webkit.org/show_bug.cgi?id=150277
Summary
[EFL] Fix debug build break since r191198
Joonghun Park
Reported
2015-10-17 07:55:40 PDT
uint64_t implementation can be differ in each platform. It leads to build failure in some platform, for example Ubuntu. So type casting is needed to match the argument type to the string format in LOG call.
Attachments
Patch
(1.92 KB, patch)
2015-10-17 07:58 PDT
,
Joonghun Park
no flags
Details
Formatted Diff
Diff
Patch
(5.83 KB, patch)
2015-10-18 08:47 PDT
,
Joonghun Park
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joonghun Park
Comment 1
2015-10-17 07:58:59 PDT
Created
attachment 263373
[details]
Patch
Viatcheslav Ostapenko
Comment 2
2015-10-18 06:57:33 PDT
I don't think type casting is right solution here. I would suggest to use PRIu64 macro. So, the fix will be: #define __STDC_FORMAT_MACROS #include <inttypes.h> LOG(IndexedDB, "IDBDatabase::fireVersionChangeEvent - current version %"PRIu64", requested version %"PRIu64, currentVersion, requestedVersion);
Joonghun Park
Comment 3
2015-10-18 08:12:23 PDT
(In reply to
comment #2
)
> I don't think type casting is right solution here. > I would suggest to use PRIu64 macro. > > So, the fix will be: > > #define __STDC_FORMAT_MACROS > #include <inttypes.h> > > > LOG(IndexedDB, "IDBDatabase::fireVersionChangeEvent - current version > %"PRIu64", requested version %"PRIu64, currentVersion, requestedVersion);
Thank you for your advice :) Your solution is the right one. I will apply your comment right away.
Joonghun Park
Comment 4
2015-10-18 08:47:32 PDT
Created
attachment 263422
[details]
Patch
WebKit Commit Bot
Comment 5
2015-10-18 16:29:54 PDT
Comment on
attachment 263422
[details]
Patch Clearing flags on attachment: 263422 Committed
r191265
: <
http://trac.webkit.org/changeset/191265
>
WebKit Commit Bot
Comment 6
2015-10-18 16:29:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug