[EFL] Fix debug build break since r191198 https://bugs.webkit.org/show_bug.cgi?id=150277

Patch by Joonghun Park <jh718.park@samsung.com> on 2015-10-18
Reviewed by Darin Adler.

No new tests, no new behaviours.

Use the correct %"PRIu64" for uint64_t,
instead of %llu.

* Modules/indexeddb/client/IDBDatabaseImpl.cpp:
(WebCore::IDBClient::IDBDatabase::fireVersionChangeEvent):
* Modules/indexeddb/client/IDBOpenDBRequestImpl.cpp:
(WebCore::IDBClient::IDBOpenDBRequest::onUpgradeNeeded):
* Modules/indexeddb/legacy/IDBDatabaseBackend.cpp:
(WebCore::IDBDatabaseBackend::processPendingOpenCalls):
(WebCore::IDBDatabaseBackend::openConnectionInternal):
* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::notifyConnectionsOfVersionChange):

Canonical link: https://commits.webkit.org/168435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191265 268f45cc-cd09-0410-ab3c-d52691b4dbfc